# dispmanx-gst-play

./: AUTHORS  LICENSE  Makefile.am  README.md  configure.ac  meson.build  meson_options.txt
dispmanx/: Makefile.am  dispmanx-gst-play.c  dispmanx-gst-play.h  dispmanx-window.c
include/: dispmanx_window.h  meson.build  player.h
src/: dispmanx_window.c  meson.build  player_interface.c  player_standalone.c
